# practice_works

glory/: Cargo.toml
glory/src/: calc.rs  data.rs  draw.rs  main.rs  piston.rs  simulator.rs  update.rs
glory/src/calc/: ahead.rs  next_tiles.rs  simulator.rs  tile_position.rs
glory/src/calc/simulator/: self_organize.rs  set_climate.rs
glory/src/data/: planet.rs
glory/src/data/planet/: tile.rs
glory/src/data/planet/tile/: environment.rs  society.rs
glory/src/data/planet/tile/environment/: biological_resource.rs  natural_resource.rs  nature.rs
glory/src/data/planet/tile/society/: culture.rs  technology.rs
glory/src/update/: create_data.rs  mouse_click_event.rs  update_data.rs
glory/src/update/update_data/: put_people_to_data.rs  update_tile.rs
glory/src/update/update_data/update_tile/: update_biological_resource.rs  update_culture.rs  update_natural_resource.rs  update_nature.rs  update_technology.rs
