[package]
name = "glory"
version = "0.1.0"
authors = ["Aoko Yano <aoko.the.foreigner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
once_cell = "1.19.0"
rand = "0.8.5"
anyhow = "1.0.81"
